force-app/main/default/objects/Program_Scheduler__c/Program_Scheduler__c.object-meta.xml
<CustomObject>
    <label>Program Scheduler</label>
    <nameField>
        <displayFormat>PS-{0000000}</displayFormat>
        <label>Program Scheduler Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Scheduler</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>