force-app/main/default/objects/Program_Scheduler__c/fields/Processed__c.field-meta.xml
<CustomField>
    <fullName>Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identify if the record has been processed</description>
    <inlineHelpText>Identify if the record has been processed</inlineHelpText>
    <label>Processed</label>
    <type>Checkbox</type>
</CustomField>