force-app/main/default/objects/Program_Scheduler__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identify the Program that is related to the Scheduler record.</description>
    <inlineHelpText>Identify the Program that is related to the Scheduler record.</inlineHelpText>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Program Scheduler</relationshipLabel>
    <relationshipName>Program_Scheduler</relationshipName>
    <type>Lookup</type>
</CustomField>