force-app/main/default/objects/Program_Scheduler__c/fields/Program_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Template_Name__c</fullName>
    <description>Identify the Program Template name (if selecteD)</description>
    <inlineHelpText>Identify the Program Template name (if selecteD)</inlineHelpText>
    <label>Program Template Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>